--- a/plc4x/industry-and-open-source.adoc
+++ b/plc4x/industry-and-open-source.adoc
@@ -6,18 +6,18 @@ Or possibly: How IT and OT grew apart in the last 30 years.
 (Remark: The IT used in automation is usually referred to as OT - Operational Technology)
 
 In the 90s the IT and the OT world were pretty much aligned and very similar to each other.
-At that time Microsoft was dominating the market of operating-systems.
-But in general this was a time in which many suppliers of proprietary software earned a lot of money.
+At that time Microsoft dominated the operating-systems market.
+But, this was also a time when many proprietary software companies earned a lot of money.
 
-These companies also were driving innovation.
-Everything was possible for which vendors were offering solutions for.
-During this time, a Vendor-Lock-In was something both suppliers and customers were happy with, as it brought so much comfort for the user and so much recurring revenue for the companies providing these solutions.
+These companies also drove innovation.
+Everything was possible, for which vendors were happy to supply solutions for.
+During this time, a Vendor-Lock-In was something both suppliers and customers were happy with, as it brought so much comfort to the user and so much recurring revenue for the companies providing the solutions.
 
 This all changed at the end of the 90s.
-First, certain initiatives no longer wanted to accept this.
-Groups of like-minded people joined forces to change this.
-During this time, early versions of Linux were created, stuff like new webservers (Apache Webserver).
-Also notable was the Samba project, which aimed to open Windows networks to Unix and Linux operating systems.
+First, certain initiatives no longer wanted to accept the status quo.
+Groups of like-minded people joined forces to bring about change.
+During this time, early versions of Linux operating system distributions were popping up, bringing new apps like new webservers, e.g. Apache Webserver, along for the ride.
+Also notable was the Samba project, which opened Windows networks to Unix and Linux operating systems.
 These people called their way of collaborating: Open-Source (OS).
 
 At that time the OS was usually written in C and C++.
@@ -30,31 +30,31 @@ The OSes grew and the philosophy found more and more supporters.
 
 This is about when the paths of IT and OT split.
 
-While the commercial software vendors had no interest in changing a working solution, the OS world  had many competing solutions and so the problem evolved.
+While the commercial software vendors had no interest in changing a working solution, the OS world  had many competing solutions, and so the problem evolved.
 Not all solutions were successful or generally accepted.
-But, sometimes even the dominating solution was replaced by a upcoming one, in a very short period of time.
+But, sometimes even the dominating solution was replaced by an upcoming one.
+This could happen in a very short period of time.
 What might have seemed like a waste of resources to outsiders, actually was one of the OSes biggest strengths: Many people trying new stuff, early in the development cycle.
 Good ideas survived, bad ones were abandoned.
 Projects that were able to adopt good ideas from other projects, grew.
-Separated from the commercial interests, developers just tried out the new ideas that were flooding in.
-Their motivation, was typically just curiosity or the simple fact that nobody else ever tried it before.
-This way of thinking created a huge burst in innovations.
+Separated from the commercial interests, developers just tried out the new ideas that flooded in.
+Their motivation was typically just curiosity, or the simple fact that nobody else ever tried it before.
+This way of thinking created a huge burst of innovations.
 
 From the OT perspective the problem was, that it couldn't and wouldn't deal with the dynamic evolution.
-# TODO: "Is OSes with this slow innovation rate" sounds odd...
-In a market where cycles are planned in timeframes of years, OSes with this slow innovation rate were just not tenable.
-Up until this time, companies never had issues with buying the solutions of the established vendors and nobody wanted to risk change.
+In a market where cycles are planned in timeframes of years, using OS in solutions with such slow innovation rates was not tenable.
+Up until this time, companies never had issues buying established vendor solutions and nobody wanted to risk change.
 
 In the early 2000s (2000-2010) companies like Amazon or Google didn't want to waste the compute-power they had sitting in their data-centers for peak-loads and this is about when the first cloud-offerings started appearing.
 This concept brought completely new concepts to life: BigData, Microservices and Containers were direct results of this development.
 These distributed systems, now being more complex to run and maintain, created a new concept of "Software as a Service".
-While in the 90s there was only the option to buy and run a piece of software, now you could simply rent it and have someone else deal with the tricky parts.
+While in the 90s there were only options to buy and run a piece of software, now we could simply rent it, and let someone else deal with the tricky parts.
 
 Established project management strategies could no longer cope with the dynamics modern IT had to deal with.
 While in the 90s projects were managed using the Waterfall-Modell or RUP, in the 2010s more and more agile methods started being used.
 
 Another market that also saw growth with the increased adoption of open-source: Consulting.
-It was easily manageable to train employees in the established tools and concepts of the 90s, it was now generally not possible in the 2010s.
+It was easily manageable to train employees in the established tools and concepts of the 90s, it was generally not possible by the 2010s.
 In order to address this problem, consultants were hired as travelling knowledge leaders to bring new skills into the company.
 If a company wanted to adopt a new technology, it was usually cheaper to hire consultants that specialized in these (new) topics, profiting from the knowledge transfer that usually was included as part of such a consulting contract.
 
@@ -70,7 +70,7 @@ A lot has changed in the IT world, but little has changed in the OT world.
 Some vendors updated the operating systems, but significant innovations, like in the IT world, didn't happen.
 Therefore, only a few experts in the OT world paid attention to the changes in the IT world.
 
-Some time around 2017 this trend now greatly backfired on the entire industry.
+Sometime around 2017 this trend greatly backfired on the entire industry.
 
 During this time new concepts, usually aggregated with the topic "Industry 4.0" and "Smart Factory", began to generate new interest across the industry.
 The established OT vendors quickly realized a huge, untapped market and fueled the fire with gigantic marketing budgets.
@@ -79,11 +79,11 @@ Not a single one of the big OT vendors is currently not offering its own proprie
 However, if you have a deeper look at the topics aggregated with the term "Industry 4.0", the IT experts will probably realize, that for all of these, there are many OS solutions available already.
 What many might not be aware of: Most of the commercial solutions sold by the OT vendors usually contain a lot of OS under the hood.
 
-The part OS was missing (to be a good solution), was universal data-exchange with industrial hardware and equipment.
+The part missing in OS (to be a good solution), was universal data-exchange with industrial hardware and equipment.
 The industry-solution to this problem was a new protocol called: OPC-UA.
 Parallel to this, a well established protocol from the IT-world found its way into the OT-world: MQTT.
 (Actually MQTT initially originated from the OT world, was adopted by the IT and is now coming back to the OT)
-However, both solutions require retrofitting existing equipment, which usually is expensive, and due to current supply chain difficulties, might be impossible to accomplish.
+However, both solutions require retrofitting existing equipment, which usually is expensive and due to current supply chain difficulties, might be impossible to accomplish.
 
 Because there were no existing OS solutions in this sector, I initiated the Apache PLC4X project, in 2017.
 The goal of the project, to simplify communication with industrial equipment, by directly using the protocols pre-existent in the devices, but hiding the complexity of using them.
@@ -97,11 +97,11 @@ Most of them didn't understand the concept.
 They just thought I was investing my time to provide them with "free" software.
 Free as in beer (not libre).
 
-However, they never realized that even though the OS software's is free (generally speaking), OS usage always comes with a cost.
+However, they never realized that even though OS software is free (generally speaking), its usage always comes with a cost.
 
-One of the reason: Yes, you may use this software for free, but you can't demand free support.
+One of the reasons: Yes, you may use this software for free, but you can't demand free support.
 Another reason: OS software is not a 'finished' product.
-Think building blocks (technology) for building other software.
+Think building blocks (technology) to build other software.
 You can't just download, install and use OS software to solve your problems.
 So, even if a company doesn't require commercial support, the company has to invest time and/or money in other ways, to put the finishing touches on the solution.
 
@@ -113,16 +113,18 @@ For me, this is generally the best of both worlds: It supports the people that b
 Also can OS be considered a form of cooperation, even between competitors.
 Here competitors can work on features of OS (together) that are not necessarily essential parts of their core business.
 
-As an example, I might spotlight the community behind Apache PLC4X where multiple companies are working together on implementing communication drivers for industrial protocols.
-Some of these companies our community members are working for are definitely competitors, however none want to make a living out of selling drivers but all nonetheless need working solutions for communicating with industrial equipment.
+As an example, I might spotlight the community behind Apache PLC4X, where multiple companies are working together on implementing communication drivers for industrial protocols.
+Some of these companies our community members are working for are competitors.
+None want to make a living out of selling drivers.
+All nonetheless need working solutions for communicating with industrial equipment.
 By working on PLC4X together, each company invests work-time of their employees, but all gain usage (and understanding) of the full product.
 The time invested in total however is only a fraction of that, which would have been required to implement everything on their own.
 
 Another example would be the OSADL (Open Source Automation Development Lab eG).
-Here a larger number of companies have joined forces for creating a certified real-time Linux for their products.
+Here a large number of companies have joined forces for creating a certified real-time Linux for their products.
 
 One of the biggest advantages of OS-development is that companies can free themselves from relying on another specific company.
-If the vendor providing a product another company relies on, gives up on the product, there is generally nothing that can be done about this.
+If the vendor providing a product on which another company relies gives up on the product, there is generally nothing that can be done about it.
 With OS the company could continue to apply fixes or add new features, or they could hire people to do it for them.
 
 Another thing I really like about OS, is that companies can try out new ideas.
@@ -142,13 +144,14 @@ Yet another reason that definitely plays out in favor of OS is that for propriet
 With OS, the company is able to choose from a huge pool of experienced consultants across a broader spectrum of companies.
 
 The people from this pool of highly skilled experts usually pay a lot of attention to adoption of OS and its concepts.
-Active participation on open-source definitely pays out on the recruiting side as employees typically want to work on OS solutions as it broadens the relevance of their skills.
+Active participation on open-source definitely pays out on the recruiting side.
+Employees typically want to work on OS solutions as it broadens the relevance of their skills.
 
 In a study that the OpenForum Europe and Fraunhofer ISI did [1], the results showed that every euro invested in OS pays out four-times.
 
 == So what's the problem?
 
-If it hasn't happened yet, the industry should realize quickly that Industry 4.0 is more an IT topic than an OT topic.
+If it hasn't happened yet, the industry should realize quickly that Industry 4.0 is more of an IT topic than an OT topic.
 
 Therefore, the typical automation companies probably don't have the necessary know-how to provide solutions.
 A realization not lost of most of them.
@@ -162,47 +165,48 @@ Knowlege transfer is generally the only viable option and OS is the perfect mode
 
 The OT industry is accustomed to thinking in terms of products, but it's growing more and more important to start thinking in terms of services.
 
-With the typical complexity of Industry 4.0 projects, using the waterfall modell or RUP to manage is guaranteed to result in failure.
+With the typical complexity of Industry 4.0 projects, using the waterfall model or RUP to manage is guaranteed to result in failure.
 The only option here is to adopt agile methodologies.
 
-Yet another problem, most industrial equipment was developed to communicate using a highly secured networks.
-Statements like: "Our network is secure", I have encountered more often, than I can count them.
-As a result of this, most modern industrial equipment is almost unprotected against malicious access.
+Yet another problem, most industrial equipment was developed to communicate using highly secured networks.
+Statements like: "Our network is secure", I have encountered more often than I can count.
+The manufacturers therefore paid only little attention to security, because this was considered a waste of resources.
+As a result, most modern industrial equipment is almost unprotected against malicious access.
 Simply connecting these networks to the company network, or even the internet, usually results in failure.
 
-Despite the fact that the OT world is desperately in need of support from the IT world, as an IT consultant it currently is almost impossible to acquire any contracts from there.
+Despite the fact that the OT world is in desperate need of support from the IT world, it is currently almost impossible for IT consultants to acquire any contracts.
 
 On the one side, large corporations, having inflexible structures and procedures, are seldom interesting employers for OS enthusiasts.
 Beyond that, because many of these people are highly specialized experts, a single company usually doesn't provide enough room to keep them happy over a prolonged period of time.
 That's generally the reason they chose to be a consultant in the first place.
 
-Unfortunately, the purchasing departments of larger companies usually only do business with so-called preferred vendors.
-These are often also larger companies where contracts have been established to "ease the process of purchasing products or services".
-Mostly, this is mainly about lowering the price as much as possible and less about easing the actual purchase.
+Unfortunately, the purchasing departments of larger companies usually only do business with so-called 'preferred' vendors.
+Who are often also larger companies where contracts have been established to "ease the process of purchasing products or services".
+Mostly, it's mainly about lowering the price as much as possible and less about easing the actual purchase.
 However, this is something the IT world knows just as well.
 
-The big problem with this however is, while the OT world typically have well established preferred vendor relations to suppliers of products, they don't maintain relations with firms that do the consulting work.
+The big problem with this, while the OT world typically have well established preferred vendor relations with suppliers, they don't maintain relations with the firms that do consulting work.
 Therefore, the companies that IT consultants work for are usually never listed, and anything going beyond a small proof of concept is simply not possible.
-Even if a small number of IT companies managed to break this boundary, typically this happened for well known IT companies, that operate around well established OS projects.
-It will probably take several more years before normal IT consultancies can be listed here.
+Even if a small number of IT companies managed to break this boundary, typically this happened for well known IT companies, that operate around well established OS projects.  
+It will probably take several more years before less product focussed IT consultancies are added to these preferred vendor lists.
 
 To add to the growing list of problems I already mentioned, some really big problems arise due to the way OT companies work in general.
 I didn't make any of this up, BTW. But, was told about it behind 'closed doors' ... usually at conferences, or industrial fair receptions (after a few drinks).
 
 - In some companies prestige of executives are directly bound to the budget they are able to decide over and not how well they spend what they have. Using OS would directly result in less expenses in license-costs. This would result in a smaller budget and this would directly reduce the prestige of that manager. (The use it or lose it problem)
-- Pricing in the OT world is an intransparent mess. If you've ever tried finding a price for a given product, it's generally impossible because every price is negotiated. Many employees in the purchasing departments, tie their prestige to the conditions they get from the vendors. Many of whom are now afraid. If the company they work for ever started buying less of a vendors products, it would result in a cut of special conditions which would again result in a loss of prestige that of course would influence invitations to that vendor's next incentive event.
+- Pricing in the OT world is an intransparent mess. If you've ever tried finding a price for a given product, it's generally impossible because every price is negotiated. Many employees in the purchasing departments, tie their prestige to the conditions they get from vendors. Many are now afraid. If the company they work for ever started buying less of a vendors products, it would result in a cut of special conditions which would again result in a loss of prestige that of course would influence invitations to that vendor's next incentive event.
 - The last case I've run into is that it's not uncommon for vendors of industrial products to be shareholders of their customers. As shareholders, they have certain options to control which companies these customers do business with.
 
-Changing all of this is particularly challenging, because, as I mentioned before, over the last 25 years there has been very little exchange between IT and OT.
+Changing all of this will be challenging, because, as I mentioned before, over the last 25 years there has been very little exchange between IT and OT.
 Unfortunately, many of the decision-makers across the industry come from the OT-world and therefore are deeply rooted with OT products and vendors.
 Convincing them to change would require courting them at industrial fairs with huge and impressive booths.
 We can all probably imagine that this is simply not possible for OS, given their typically low marketing budgets.
-Perhaps over time large consultancies will begin presenting their services there, but this will take some time, and until then not much will change.
+Perhaps over time large consultancies will begin presenting their services in OT, but this will take some time, and until then not much will change.
 
 When talking to representatives of the industry, probably the most annoying problem, and one that I always face, are NDAs.
-In the last 6 years I haven't done a single POC for a company where I didn't have to sign an NDA that prevented me from talking about it.
-So, whenever I'm advocating OS in the industry, I usually get the question: "So, who's using OS and what are they using it for?".
-In this case I answer with: "Way more than you think, however I'm not allowed to talk about it".
+In the last 6 years I have not done a single POC for a company where I didn't have to sign an NDA that prevented me from talking about it.
+Whenever I'm advocating OS to the industry, I usually get the question: "So, who's using OS and what are they using it for?".
+In this case I'll answer: "Way more than you think, however I'm not allowed to talk about it".
 That doesn't really help.
 
 So what's the result of this?
@@ -210,16 +214,17 @@ So what's the result of this?
 The IT and OS expert generally have two options:
 
 1. The consultant changes its focus and turns towards longer running projects in other customer-areas
-2. He accepts a full-time-employment offer from one of the bigger companies
+2. They accept a full-time-employment offer from one of the bigger companies
 
-In both cases the expert is no longer available for the industry in general.
+In both cases the expert is generally no longer available to the industry.
 
 Considering the option of companies from the OT world trying to hire people from the IT and OS world, I've noticed that (at least in Germany) companies are offering unreasonably low salaries.
 When questioning them about it, I'm usually told that higher salaries wouldn't fit into the company's salary structure.
 
 One thing the companies should realise, is that the rest of the world is used to IT salaries and will happily pay them.
-Why should a highly qualified expert voluntarily pass on a much higher salary, just because the OT-world has not grown accustomed to the higher payscale?
-Beyond the reduced payment here (again ... generally in Germany ... I don't know if this applies to other areas of the world), these OT companies also don't provide typical benefits like:
+Why would a highly qualified expert voluntarily pass on a higher salary?
+Just because the OT-world has not grown accustomed to the higher payscale?
+Beyond the reduced payment (again ... generally in Germany ... I don't know if this applies to other areas of the world), OT companies also don't provide typical benefits like:
 
 - Remote work
 - Flexible working times
@@ -231,19 +236,19 @@ Here many companies are complaining about the shrinking pool of highly skilled e
 The bitter reality (for them) is that the pool is not shrinking at all.
 It's actually growing.
 People are simply not reacting to their job offers.
-Offering a fruit basket simply won't make your company a fresh and hip company capable of attracting this level of talent.
+Simply offering a fruit basket won't make your company a fresh and hip company capable of attracting this level of talent.
 
-Some companies have grown wise to these problems and have started nice and flashy digitization hubs.
-Here they are trying to provide an environment that is more tempting for highly skilled IT experts, however these hubs are usually tied into their corporation quite strictly and most of the flexibility ends where the work starts.
+Some companies have grown wise to the problems and have started very nice and flashy digitization hubs, in which they are trying to provide an environment more tempting to highly skilled IT experts.
+However, these hubs are usually tightly bound with their corporation, and so most of the flexibility ends where the work starts.
 
 == Conclusion
 
 The world we live in is getting more and more dynamic.
-Companies that are not able to adjust to change quickly will not survive for long in this environment.
+Companies that are not able to adjust to change quickly will not survive for long.
 
 The typical approach of the (German) industry is completely useless for dealing with such dynamic requirements.
 
-In order to be able to compete with the competition, a consequent digitization is the only option.
+In order to be able to keep up with the competition, a consequent digitization will be required.
 Unfortunately, this can't be bought and installed, like the typical products the industry has grown used to.
 These companies must accept these new conditions and make adjustments on all levels.
 
@@ -251,10 +256,10 @@ The modern IT world, and especially the OS world, have solutions for most of the
 Beyond that, there's an army of highly skilled professionals that can help.
 
 However, the industry needs to realize, that in the IT world other rules apply than in the OT world.
-The IT world doesn't need to and won't adjust to the OT worlds wishes.
-We had full employment in the IT, even before Industry 4.0 was a thing and nothing has changed here.
+The IT world doesn't need to and hence won't adjust to the OT world's wishes.
+We had full employment in the IT, even before Industry 4.0, and nothing has changed now.
 
-The German industry especially suffers from these problems and desperately needs to move out of it's comfort-zone, or it will develop into a cage.
+The German industry in particular suffers from these problems and desperately needs to move out of it's comfort-zone, or it will develop into a cage.
 
 Probably the most prominent example are electrical cars: Here for a long time the German industry had the opinion that nobody wants or needs them and therefore no impulses were set in that direction.
 They were proved wrong when the US companies entered into the now burgeoning market.
