--- a/plc4x/industry-and-open-source.adoc
+++ b/plc4x/industry-and-open-source.adoc
@@ -288,7 +288,7 @@ Now all of a sudden all German car manufacturers are trying to catch up, and it'
 
 I guess only time will tell, if the companies continuing business as usual for the next years will still be around in 10 years.
 
-One thing I am absolutely certain of: The IT and OS experts definitely will.
+One thing I am absolutely certain of: The IT and OS experts definitely will still be big in business.
 
 So my tip for the OT industry is:
 
