--- a/plc4x/industry-and-open-source.adoc
+++ b/plc4x/industry-and-open-source.adoc
@@ -295,7 +295,7 @@ So my tip for the OT industry is:
 - Accept that many of you have been sleeping for the last 25-30 years and the world you are waking up to is not the same it was when you fell asleep.
 - Accept that you need help in getting around in this new world.
 - Accept that your old partners from then are not necessarily the best to help you in this new world.
-- Accept that in the IT and OT world there is a lot of experience, willingness and ability to help.
+- Accept that in the IT and OS world there is a lot of experience, willingness and ability to help.
 - Accept that you will have to change and not the world around you.
 
 Let's shape the future ... together :-)
